adding bulk create book
