# ses3/docs/swagger.json
@@ -52,7 +52,53 @@
                 }
             }
         },
-        "/shopping/book/{pubId}": {
+        "/shopping/book/bulk/create": {
+            "post": {
+                "description": "Put all mandatory parameter",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "shopping-controller"
+                ],
+                "summary": "Shopping",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "guest",
+                        "description": "guest",
+                        "name": "X-Username",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "EN",
+                        "description": "EN",
+                        "name": "Accept-Language",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "BulkBookRequest",
+                        "name": "BookDto",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/shopping.BookBulkReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {}
+                }
+            }
+        },
+        "/shopping/book/find/{pubId}": {
             "get": {
                 "description": "Put all mandatory parameter",
                 "consumes": [
@@ -122,6 +168,17 @@
         "healthcheck.CheckResponseDto": {
             "type": "object"
         },
+        "shopping.BookBulkReq": {
+            "type": "object",
+            "properties": {
+                "books": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/shopping.CreateBookReq"
+                    }
+                }
+            }
+        },
         "shopping.BookDto": {
             "type": "object",
             "properties": {
@@ -134,6 +191,20 @@
                 "publisher": {
                     "type": "object",
                     "$ref": "#/definitions/shopping.PublisherDto"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "shopping.CreateBookReq": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "type": "string"
+                },
+                "pubId": {
+                    "type": "integer"
                 },
                 "title": {
                     "type": "string"
