# ses3/infrastructure/shopping/controller_create_book.go
@@ -3,8 +3,8 @@ package shopping
 import (
 	"context"
 	sh "github.com/geb/aweproj/ses3/shared"
+	shopping_dto "github.com/geb/aweproj/ses3/shared/dto/shopping"
 	"github.com/labstack/echo/v4"
-	"strconv"
 )
 
 // All godoc
@@ -13,26 +13,27 @@ import (
 // @Description Put all mandatory parameter
 // @Param X-Username header string true "guest" default(guest)
 // @Param Accept-Language header string true "EN" default(EN)
-// @Param pubId path string true "publisherId" default(1)
+// @Param BookDto body shopping.BookBulkReq true "BulkBookRequest"
 // @Accept json
 // @Produce json
-// @Success 200 {object} shopping.BookDto
-// @Router /shopping/book/find/{pubId} [get]
-func (c *Controller) FindBookByPubId(ec echo.Context) error {
+// @Success 200
+// @Router /shopping/book/bulk/create [post]
+func (c *Controller) BulkCreateBook(ec echo.Context) error {
 	var (
-		ctx      = context.Background()
-		pubIdStr = ec.Param("pubId")
+		ctx     = context.Background()
+		request shopping_dto.BookBulkReq
 	)
-	pubId, err := strconv.Atoi(pubIdStr)
+
+	if err := ec.Bind(&request); err != nil {
+		return sh.Response(ec, nil, sh.New(sh.BAD_REQUEST, err))
+	}
+
+	err := c.InterfacesHolder.ShoppingViewService.BulkCreateBook(ctx, request.BookBulk)
+
 	if err != nil {
 		return sh.Response(ec, nil, sh.New(sh.BAD_REQUEST, err))
 	}
 
-	response, err := c.InterfacesHolder.ShoppingViewService.FindBookByPubId(ctx, pubId)
+	return sh.Response(ec, nil, nil)
 
-	if err != nil {
-		return sh.Response(ec, nil, sh.New(sh.BAD_REQUEST, err))
-	}
-
-	return sh.Response(ec, response, nil)
 }
